[tool.poetry]
name = "landscape-client-cpu-profiler"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0.0"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
addopts = "-v -s --tb=short"
testpaths = ["."]
python_files = "test_*.py"
python_functions = "test_*"
